have issues with aligning hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,34 +96,42 @@ nav {
     font-size: 2.5em;
 }
 
-
-
-
 /* ###################### MAIN SECTIONS ##################### */
 /* ensure full page and footer at bottom */
 main {
-    background-color: lightblue;
-    margin-top: 100px;
-    
+    background-color: darkgrey;
+       
 }
 
 main h1 {
     font-size: 1em;
 }
 
-
 .hero-pictures {
-    height: 70vh;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
     position: relative;
-    margin-top: 50px;
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
+    flex-shrink: 1;
+    flex-basis:100%;
+    align-items: stretch;
+
+        
+    /* .hero-pictures img {
+        position:absolute;
+        top:0;
+        left:0;
+        right:0;
+        bottom:0;
+        margin:auto;
+    } */
 }
 
-#hero-pic1 {
+/* #hero-pic1 {
     position: absolute;
-    width: 100%;
+    height: 100%;
     opacity: 0;
     inset: 0;
     animation: slide-show 12s infinite;
@@ -139,6 +147,7 @@ main h1 {
 
 .slide img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
 }
@@ -157,7 +166,7 @@ main h1 {
     }
     50% {
         opacity: 0;
-    }
+    } */
 
 
 
